# audioToText

./: README.md  pyproject.toml
src/audioToText/: __init__.py  audioToText.py
src/mp3ToText/: __init__.py  mp3ToText.py
