[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool]
hatch.metadata.allow-direct-references = true

[project]
name = "audioToText"
authors = [{name='Matt Manes'}]
description = ""
version = "0.0.1"
requires-python = ">=3.7"
dependencies = ["SpeechRecognition",
				"pydub",
				"requests",
				"whosYourAgent @ git+https://github.com/matt-manes/whosyouragent.git"]